kubernetes/apps/base/home-assistant/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`home-assistant.${cluster_domain}`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8080
